# Siemens_Gadgetron_Prep

./: CMakeLists.txt  README.md
cmake/: FindACE.cmake
docker/: Dockerfile  README.md
docker/incremental_ubuntu_1604/siemens_gadgetron/: Dockerfile  README.md
docker/incremental_ubuntu_1604/siemens_gadgetron_cuda80/: Dockerfile  README.md
docker/incremental_ubuntu_1604/siemens_gadgetron_cuda90/: Dockerfile  README.md
docker/incremental_ubuntu_1604/siemens_gadgetron_nopython/: Dockerfile
docker/incremental_ubuntu_1804/siemens_gadgetron_nopython/: Dockerfile  README.md
gadgets/: CMakeLists.txt
gadgets/moco_ave/: CMakeLists.txt  GtImageMoCoAveGadget.cpp  GtImageMoCoAveGadget.h  GtImageMoCoAvePSIRGadget.cpp  GtImageMoCoAvePSIRGadget.h  gadgetron_siemens_moco_ave_export.h
gadgets/moco_ave/config/: Siemens_Gadgetron_DB_LGE_MOCO_AVE_istore.xml  Siemens_Gadgetron_LGE_MOCO_AVE.xml  Siemens_Gadgetron_LGE_MOCO_AVE_dstore.xml  Siemens_Gadgetron_LGE_MOCO_AVE_istore.xml  Siemens_Gadgetron_WB_LGE_MOCO_AVE.xml
gadgets/sasha_hc/: BucketToBufferHCGadget.cpp  BucketToBufferHCGadget.h  CMakeLists.txt  CalcMolliTiGadget.cpp  CalcMolliTiGadget.h  CmrParametricSashaT1T2MappingGadget.cpp  CmrParametricSashaT1T2MappingGadget.h  DuplicateReferenceDataGadget.cpp  DuplicateReferenceDataGadget.h  FlagSashaGadget.cpp  FlagSashaGadget.h  FlagSashaHCGadget.cpp  FlagSashaHCGadget.h  MoCoSashaGadget.cpp  MoCoSashaGadget.h  MoCoSashaHCGadget.cpp  MoCoSashaHCGadget.h  MocoAntsHC.py  ReconGrappaSashaHCGadget.cpp  ReconGrappaSashaHCGadget.h  SashaHCMultiAveGadget.cpp  SashaHCMultiAveGadget.h  SashaHCMultiRepGadget.cpp  SashaHCMultiRepGadget.h  sashahclib_export.h
gadgets/sasha_hc/config/: SASHA-HC.xml  SASHA-HC_ants.xml  SASHA-HC_grappa.xml  SASHA-HC_grappa2.xml  SASHA-HC_grappa_ants.xml  SASHA-HC_grappa_base.xml  SASHA-HC_grappa_moco.xml  SASHA-HC_grappa_moco_debug.xml  SASHA-HC_grappa_moco_dstore.xml  SASHA-HC_grappa_moco_ismrmrd_storage.xml  SASHA-HC_grappa_moco_istore.xml  SASHA-HC_grappa_nomoco.xml  molli.xml
schema/: IsmrmrdParameterMap_Siemens_SASHA_HC.xsl  IsmrmrdParameterMap_Siemens_SashaT1T2.xsl  IsmrmrdParameterMap_Siemens_SashaT1T2T1p_HC.xsl  IsmrmrdParameterMap_Siemens_SashaT1T2_HC.xml  IsmrmrdParameterMap_Siemens_SashaT1T2_HC.xsl
test/integration/: CMakeLists.txt  data.json  data.txt
test/integration/cases/: LGE_1slice.cfg  LGE_9slices.cfg.tmp  LGE_multiple_slices.cfg.tmp  T1T2Mappinp.cfg
toolboxes/: CMakeLists.txt
toolboxes/cmr/: ._gadgetron_siemens_toolbox_cmr_export.h  CMakeLists.txt  gadgetron_siemens_toolbox_cmr_export.h
toolboxes/cmr/application/: ._cmr_multi_parametric_mapping.cpp  ._cmr_multi_parametric_mapping.h  ._cmr_sasha_t1_t2_mapping.cpp  ._cmr_sasha_t1_t2_mapping.h  cmr_multi_parametric_mapping.cpp  cmr_multi_parametric_mapping.h  cmr_sasha_t1_t2_mapping.cpp  cmr_sasha_t1_t2_mapping.h  jointSashaT1T2RecoveryOperator.h  jointSashaT1T2T1pRecoveryOperator.h
toolboxes/core/: CMakeLists.txt  gadgetron_siemens_toolbox_core_export.h
toolboxes/core/application/: core_moco_averaging.cpp  core_moco_averaging.h  core_phase_sensitive_recon.cpp  core_phase_sensitive_recon.h  core_surface_coil_correction.cpp  core_surface_coil_correction.h
